--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Metarnal Health</string>
+    <string name="app_name">Maternal Health</string>
     <string name="search">Search</string>
     <string name="title_activity_mother__appointment_details_">Mother_Appointment_details_Activity
     </string>
